--- a/apps/docs/content/b/subcommands/completion.mdx
+++ b/apps/docs/content/b/subcommands/completion.mdx
@@ -1,35 +1,35 @@
 ---
-description: "Generate shell completion scripts for b CLI"
+description: "Generate the autocompletion script for the specified shell."
 ---
 
 # b completion
 
-The `b completion` command generates shell completion scripts for the b CLI, enabling tab completion for commands, flags, and arguments in your shell.
+Generate the autocompletion script for `b` for the specified shell. See each sub-command's help for details on how to use the generated script.
 
-## Synopsis
+## Usage
 
 ```bash
-# Generate completion script for your shell
-b completion [bash|zsh|fish|powershell]
-
-# Source the completion script in your current shell session
-source <(b completion bash)  # for bash
+b completion [command]
 ```
 
-## Description
+## Available Commands
 
-The `completion` command generates shell completion scripts that provide command-line completion for b CLI. This allows you to use the Tab key to automatically complete commands, subcommands, flags, and arguments, making the CLI more user-friendly and efficient.
+| Command      | Description                                  |
+|--------------|----------------------------------------------|
+| `bash`       | Generate the autocompletion script for bash  |
+| `fish`       | Generate the autocompletion script for fish  |
+| `powershell` | Generate the autocompletion script for powershell |
+| `zsh`        | Generate the autocompletion script for zsh   |
 
-## Available Shells
+## Flags
 
-Completion is available for the following shells:
-
-- **bash**: For Bash shell users
-- **zsh**: For Zsh shell users
-- **fish**: For Fish shell users
-- **powershell**: For PowerShell users
+| Flag     | Description           |
+|----------|-----------------------|
+| `-h`, `--help` | help for completion   |
 
 ## Installation
+
+To use shell completion, you need to generate the script for your shell and source it.
 
 ### Bash
 
@@ -38,6 +38,16 @@ Add the following to your `~/.bashrc` or `~/.bash_profile`:
 ```bash
 # Bash completion for b CLI
 source <(b completion bash)
+```
+
+For a better completion experience with bash, consider installing the `bash-completion` package:
+
+```bash
+# On macOS with Homebrew
+brew install bash-completion
+
+# On Ubuntu/Debian
+sudo apt-get install bash-completion
 ```
 
 ### Zsh
@@ -50,6 +60,8 @@ if [ $commands[b] ]; then
   source <(b completion zsh)
 fi
 ```
+
+If you're using Oh My Zsh, the completion should work out of the box after installation.
 
 ### Fish
 
@@ -74,23 +86,17 @@ b completion powershell | Out-String | Invoke-Expression
 
 ## Examples
 
-### Generate Completion Script
+### Generate and Save Completion Script
 
 ```bash
-# Generate bash completion script
+# Generate bash completion script and save it
 b completion bash > /etc/bash_completion.d/b
 
-# Generate zsh completion script
+# Generate zsh completion script for Oh My Zsh
 b completion zsh > "${fpath[1]}/_b"
-
-# Generate fish completion script
-b completion fish > ~/.config/fish/completions/b.fish
-
-# Generate PowerShell completion script
-b completion powershell > ~/.b-completion.ps1
 ```
 
-### One-time Completion
+### Use in Current Session
 
 For a single session without modifying your shell configuration:
 
@@ -101,29 +107,3 @@ source <(b completion bash)
 # Fish
 b completion fish | source
 ```
-
-## Completion Features
-
-- **Command Completion**: Tab-complete all available commands
-- **Flag Completion**: Complete flags for each command
-- **Argument Completion**: Context-aware completion for arguments
-- **Flag Value Completion**: Smart completion for flag values
-- **Descriptions**: Show help text for completions (in supported shells)
-
-## Shell-Specific Notes
-
-### Bash
-
-For better completion experience with bash, consider installing the `bash-completion` package:
-
-```bash
-# On macOS with Homebrew
-brew install bash-completion
-
-# On Ubuntu/Debian
-sudo apt-get install bash-completion
-```
-
-### Zsh
-
-If you're using Oh My Zsh, the completion should work out of the box after installation.
