--- a/apps/docs/content/b/subcommands/init.mdx
+++ b/apps/docs/content/b/subcommands/init.mdx
@@ -1,89 +1,48 @@
 ---
-description: "Initialize a new project with b"
+description: "Create new b.yaml config"
 ---
 
 # b init
 
-The `b init` command initializes a new project with **b** configuration, creating the necessary **b.yaml** file and setting up the project structure.
+Creates a new `.bin/b.yaml` configuration file in the current directory. Environment variables have precedence over the configuration file.
 
-## Synopsis
+## Usage
 
 ```bash
-b init [options]
+b init [flags]
 ```
-
-## Description
-
-The `init` command creates a new **b.yaml** configuration file in the current directory and optionally sets up additional project files like `.gitignore` and shell integration scripts.
-
-## Options
-
-- `--quiet, -q`: Run in quiet mode with minimal output
-- `--help, -h`: Show help information
 
 ## Examples
 
-### Basic Initialization
+### Create default config
+
+This command creates a new `b.yaml` in the `.bin` directory of your current location.
 
 ```bash
-# Initialize b in current directory
+# Create new b.yaml in current directory
 b init
 ```
 
-This creates a basic **b.yaml** file:
+### Create with custom path
 
-```yaml
-version: v1
-binaries:
-  b: {}
+You can specify a custom path for the configuration file using the `--config` global flag.
+
+```bash
+# Create with custom path
+b init --config ./custom/b.yaml
 ```
 
-### Project Structure
+## Flags
 
-After initialization, your project will have:
+| Flag         | Description              |
+|--------------|--------------------------|
+| `-h`, `--help` | help for init            |
 
-```
-project/
-├── .bin
-│   ├── .gitignore
-│   └── b.yaml
-└── .envrc
-```
+## Global Flags
 
-## Configuration File
-
-The generated **b.yaml** file serves as the central configuration for your project's binary dependencies:
-
-```yaml
-binaries:
-  # Binary dependencies will be added here
-  # Example:
-  # jq:
-  #   version: "1.6"
-  # kubectl:
-  #   version: "1.28.0"
-```
-
-## Best Practices
-
-1. **Version Control**: Always commit the **b.yaml** file to version control
-2. **Team Collaboration**: Initialize **b** in shared project repositories
-3. **CI/CD**: Use `b init` in CI/CD pipelines before installing dependencies
-4. **Documentation**: Document your binary requirements in the project README
-
-## Integration with Git
-
-The `init` command automatically creates or updates `.gitignore` to exclude:
-
-```gitignore
-# b
-.bin/
-```
-
-## Error Handling
-
-Common issues and solutions:
-
-- **Permission denied**: Ensure write permissions in the current directory
-- **File exists**: The command will not overwrite existing **b.yaml** files
-- **Invalid directory**: Run from a valid project directory
+| Flag                 | Description                                                              |
+|----------------------|--------------------------------------------------------------------------|
+| `-c`, `--config string`  | Path to configuration file (current: `/home/fentas/github/fentas/b/.bin/b.yaml`) |
+| `--force`            | Force operations, overwriting existing binaries                          |
+| `-q`, `--quiet`      | Quiet mode                                                               |
+| `-v`, `--version`    | Print version information and quit                                       |
